--- a/.config/mozilla/firefox/pbl/chrome/userContent.css
+++ b/.config/mozilla/firefox/pbl/chrome/userContent.css
@@ -1,14 +1,14 @@
-@-moz-document url-prefix(about:),
-url-prefix(chrome://) {
-  :root {
-    --in-content-page-background: #1c1c1c !important;
-  }
-}
-
-@-moz-document url-prefix(about:home),
-url-prefix(about:newtab),
-url-prefix(about:blank) {
-  html {
-    background: var(--in-content-page-background) !important;
-  }
-}
+# @-moz-document url-prefix(about:),
+# url-prefix(chrome://) {
+#   :root {
+#     --in-content-page-background: #1c1c1c !important;
+#   }
+# }
+# 
+# @-moz-document url-prefix(about:home),
+# url-prefix(about:newtab),
+# url-prefix(about:blank) {
+#   html {
+#     background: var(--in-content-page-background) !important;
+#   }
+# }
